[package]
name = "gateway"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
aws-config = { version = "1.5.3", default-features = false, features = ["rt-tokio"] }
aws-sdk-s3 = { version = "1.57.0", default-features = false, features = ["rustls", "rt-tokio"] }
bytes = "1.7"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
clap = { version = "4.5.7", features = ["derive", "env"] }
hex = "0.4"
nauron-contracts = { git = "https://github.com/nauron-ai/nauron-contracts.git", tag = "0.1.0", features = ["sqlx"] }
rdkafka = { version = "0.36", features = ["cmake-build", "tokio", "ssl"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10"
thiserror = "1.0.60"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.10", features = ["v4", "v5", "serde"] }
dashmap = "5.5"
tokio-stream = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "tls-rustls"] }
zip = "0.6"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", default-features = false, features = ["axum", "vendored"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }
url = "2.5"
futures-util = "0.3"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = { version = "9", default-features = true }
